src/snapshot_middleware/snapshots/librojo__snapshot_middleware__dir__test__empty_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
  context:
    emit_legacy_scripts: true
  specified_id: ~
name: foo
class_name: Folder
properties: {}
children: []

